# BattleGearAPI

./: Cargo.toml  README.md  docker-compose.yml
migrations/2024-02-15-111418_create_images/: down.sql  up.sql
migrations/2024-02-15-184732_create_users/: down.sql  up.sql
migrations/2024-02-15-191022_create_friendships/: down.sql  up.sql
migrations/2024-02-15-191107_create_chats/: down.sql  up.sql
migrations/2024-02-15-191156_create_throphies/: down.sql  up.sql
migrations/2024-02-15-191243_create_currency/: down.sql  up.sql
migrations/2024-02-15-191340_create_user_levels/: down.sql  up.sql
migrations/2024-02-15-192708_create_TotalThrophies/: down.sql  up.sql
migrations/2024-02-19-010509_drop_totalthrophies_table/: up.sql
migrations/2024-02-21-231938_create_roles/: down.sql  up.sql
migrations/2024-02-21-231947_create_users_roles/: up.sql
migrations/2024-02-21-232345_create_users/: down.sql  up.sql
migrations/2024-02-24-161341_drop_auth_from_user/: down.sql  up.sql
src/: auth.rs  commands.rs  models.rs  repositories.rs  schema.rs
src/rocket_routes/: authorization.rs  chats.rs  currency.rs  friendships.rs  images.rs  mod.rs  throphies.rs  total_throphies.rs  user_level.rs  users.rs
tests/: authorization.rs  chats.rs  currency.rs  friendships.rs  images.rs  throphies.rs  total_throphies.rs  user_level.rs  users.rs
tests/common/: mod.rs
