[package]
name = "battle_gear"
default-run = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1"
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.1", features = [
    "diesel_postgres",
    "deadpool_redis",
] }
diesel = { version = "2.1.4", features = ["chrono", "postgres"] }
diesel-async = { version = "0.4", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "4.4"
argon2 = "0.5"
rand = "0.8"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }